--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "sha256": "^0.2.0",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
