--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "antd": "^5.4.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
