--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "@mui/material": "^5.11.16",
     "antd": "^5.4.0",
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
+    "grade-js": "^1.0.10",
+    "gradient-from-image": "^0.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
