--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,20 @@
     "antd": "^5.4.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "firebase": "^9.21.0",
     "grade-js": "^1.0.10",
     "gradient-from-image": "^0.0.7",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.39.0",
     "react-router-dom": "^6.8.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
